--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+      <title>Jason Schmitt | Software Engineer</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Favicon -->
+      <!-- <link href="images/favicon.ico" rel="shortcut icon"/> -->
+
+      <!-- Font -->
+      <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Athiti:300,400" rel="stylesheet"> -->
+
+      <!-- Stylesheets -->
+      <!-- <link rel="stylesheet" href="public/assets/vendor/bootstrap.min.css">
+      <link rel="stylesheet" href="public/assets/vendor/font-awesome.min.css">
+      <link rel="stylesheet" href="public/assets/vendor/owl.carousel.min.css">
+      <link rel="stylesheet" href="public/assets/vendor/magnific-popup.css">
+      <link rel="stylesheet" href="public/assets/vendor/animate.min.css">
+      <link rel="stylesheet" href="public/assets/vendor/style.css">
+      <link rel="stylesheet" href="public/assets/vendor/custom.css"> -->
+
+      <!-- Theme Skin -->
+      <!-- <link class="template-skins" rel="stylesheet" href="public/assets/vendor/skins/default.css"> -->
+      <!-- <style type="text/css">
+          .header-section .menu-list li a:hover {
+              background-color: #000;
+          }
+      </style> -->
+
+      <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
+      <link rel="stylesheet" href="build/css/styles.min.css">
+  </head>
   <body>
     {{{body}}}
   </body>
