adding vendor css

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,38 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Spotify web player</title>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- Favicon -->
-      <!-- <link href="images/favicon.ico" rel="shortcut icon"/> -->
+    <title>Spotify web player</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <!-- <link href="images/favicon.ico" rel="shortcut icon"/> -->
 
-      <!-- Font -->
-      <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Athiti:300,400" rel="stylesheet"> -->
+    <!-- Font -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Athiti:300,400" rel="stylesheet"> -->
 
-      <!-- Stylesheets -->
-      <!-- <link rel="stylesheet" href="public/assets/vendor/bootstrap.min.css">
-      <link rel="stylesheet" href="public/assets/vendor/font-awesome.min.css">
-      <link rel="stylesheet" href="public/assets/vendor/owl.carousel.min.css">
-      <link rel="stylesheet" href="public/assets/vendor/magnific-popup.css">
-      <link rel="stylesheet" href="public/assets/vendor/animate.min.css">
-      <link rel="stylesheet" href="public/assets/vendor/style.css">
-      <link rel="stylesheet" href="public/assets/vendor/custom.css"> -->
+    <!-- Stylesheets -->
+    <!-- <link rel="stylesheet" href="public/assets/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="public/assets/vendor/font-awesome.min.css">
+    <link rel="stylesheet" href="public/assets/vendor/owl.carousel.min.css">
+    <link rel="stylesheet" href="public/assets/vendor/magnific-popup.css">
+    <link rel="stylesheet" href="public/assets/vendor/animate.min.css">
+    <link rel="stylesheet" href="public/assets/vendor/style.css">
+    <link rel="stylesheet" href="public/assets/vendor/custom.css"> -->
 
-      <!-- Theme Skin -->
-      <!-- <link class="template-skins" rel="stylesheet" href="public/assets/vendor/skins/default.css"> -->
-      <!-- <style type="text/css">
-          .header-section .menu-list li a:hover {
-              background-color: #000;
-          }
-      </style> -->
+    <!-- Theme Skin -->
+    <!-- <link class="template-skins" rel="stylesheet" href="public/assets/vendor/skins/default.css"> -->
+    <!-- <style type="text/css">
+        .header-section .menu-list li a:hover {
+            background-color: #000;
+        }
+    </style> -->
 
-      <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-      <link rel="stylesheet" href="build/css/styles.min.css">
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <link rel="stylesheet" href="build/css/styles.min.css">
+
+
+
+    <!-- start template -->
+    <meta charset="utf-8" />
+    <title>pulse - Music, Audio and Radio web application</title>
+    <meta name="description" content="Music, Musician, Bootstrap" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- for ios 7 style, multi-resolution icon of 152x152 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-barstyle" content="black-translucent">
+    <link rel="apple-touch-icon" href="public/assets/images/logo.png">
+    <meta name="apple-mobile-web-app-title" content="Flatkit">
+    <!-- for Chrome on Android, multi-resolution icon of 196x196 -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="shortcut icon" sizes="196x196" href="public/assets/images/logo.png">
+    
+    <!-- style -->
+    <link rel="stylesheet" href="public/assets/vendor/css/animate.min.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/glyphicons.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/material-design-icons.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/bootstrap.min.css" type="text/css" />
+
+    <!-- build:css css/styles/app.min.css -->
+    <link rel="stylesheet" href="public/assets/vendor/css/app.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/font.css" type="text/css" />
+    
+    <link rel="stylesheet" href="public/assets/vendor/css/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/owl.theme.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/mediaelementplayer.min.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/mep.css" type="text/css" />
+
+    <!-- end template -->
+
+
   </head>
   <body>
     {{{body}}}
