--- a/views/pages/signin.handlebars
+++ b/views/pages/signin.handlebars
@@ -36,11 +36,11 @@
         <button type="submit" class="btn btn-lg black p-x-lg">Sign in</button>
       </form>
       <div class="m-y">
-        <a href="forgot-password.html" class="_600">Forgot password?</a>
+        <a href="/forgot-password" class="_600">Forgot password?</a>
       </div>
       <div>
         Do not have an account? 
-        <a href="signup.html" class="text-primary _600">Sign up</a>
+        <a href="/signup" class="text-primary _600">Sign up</a>
       </div>
     </div>
   </div>
