--- a/views/pages/signup.handlebars
+++ b/views/pages/signup.handlebars
@@ -1,7 +1,7 @@
 <div class="padding">
   <div class="navbar">
     <div class="pull-center">
-      {{>navbar.brand}}
+      {{!-- {{>navbar.brand}} --}}
     </div>
   </div>
 </div>
@@ -11,11 +11,11 @@
       <div>
         <a href="#" class="btn btn-block indigo text-white m-b-sm">
           <i class="fa fa-facebook pull-left"></i>
-          Sign in with Facebook
+          Sign up with Facebook
         </a>
         <a href="#" class="btn btn-block red text-white">
           <i class="fa fa-google-plus pull-left"></i>
-          Sign in with Google+
+          Sign up with Google+
         </a>
       </div>
       <div class="m-y text-sm">
@@ -23,24 +23,24 @@
       </div>
       <form name="form" action="home.html">
         <div class="form-group">
+          <input type="text" class="form-control" placeholder="Username" required>
+        </div>
+        <div class="form-group">
           <input type="email" class="form-control" placeholder="Email" required>
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" placeholder="password" required>
-        </div>      
-        <div class="m-b-md">        
-          <label class="md-check">
-            <input type="checkbox"><i class="primary"></i> Keep me signed in
-          </label>
+          <input type="password" class="form-control" placeholder="Password" required>
         </div>
-        <button type="submit" class="btn btn-lg black p-x-lg">Sign in</button>
+        <div class="m-b-md text-sm">
+          <span class="text-muted">By clicking Sign Up, I agree to the</span> 
+          <a href="#">Terms of service</a> 
+          <span class="text-muted">and</span> 
+          <a href="#">Policy Privacy.</a>
+        </div>
+        <button type="submit" class="btn btn-lg black p-x-lg">Sign Up</button>
       </form>
-      <div class="m-y">
-        <a href="forgot-password.html" class="_600">Forgot password?</a>
-      </div>
-      <div>
-        Do not have an account? 
-        <a href="signup.html" class="text-primary _600">Sign up</a>
+      <div class="p-y-lg text-center">
+        <div>Already have an account? <a href="/signin" class="text-primary _600">Sign in</a></div>
       </div>
     </div>
   </div>
