hooking up spotify api

--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -658,9 +658,9 @@
             <div class="col-md-8 offset-md-2">
               <form action="search.html" class="m-b-md">
                 <div class="input-group input-group-lg">
-                  <input type="text" class="form-control" placeholder="Type keyword" data-ui-toggle-class="hide" data-ui-target="#search-result">
+                  <input id="search-result-bar" type="text" class="form-control" placeholder="Type keyword" data-ui-toggle-class="hide" data-ui-target="#search-result">
                   <span class="input-group-btn">
-                    <button class="btn b-a no-shadow white" type="submit">Search</button>
+                    <button id="search-that-info" class="btn b-a no-shadow white" type="submit">Search</button>
                   </span>
                 </div>
               </form>
@@ -668,7 +668,7 @@
                 <p class="m-b-md"><strong>23</strong> <span class="text-muted">Results found for: </span><strong>Keyword</strong></p>
                 <div class="row">
                   <div class="col-sm-6">
-                    <div class="row item-list item-list-sm item-list-by m-b">
+                    <div id="song-results" class="row item-list item-list-sm item-list-by m-b">
                           <div class="col-xs-12">
                           	<div class="item r" data-id="item-5" data-src="http://streaming.radionomy.com/JamendoLounge">
                       			<div class="item-media ">
