adding and removing songs from playlist

--- a/views/partials/global/aside.handlebars
+++ b/views/partials/global/aside.handlebars
@@ -37,6 +37,16 @@
                 </a>
               </li>
               <li>
+                <a href="/playlist">
+                  <span class="nav-icon">
+                    <i class="material-icons">
+                      play_circle_outline
+                    </i>
+                  </span>
+                  <span class="nav-text">Playlist</span>
+                </a>
+              </li>
+              <li>
                 <a href="/browse">
                   <span class="nav-icon">
                     <i class="material-icons">
