--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,7 +53,7 @@
     <!-- style -->
     <link rel="stylesheet" href="public/assets/vendor/css/animate.min.css" type="text/css" />
     <link rel="stylesheet" href="public/assets/vendor/css/glyphicons.css" type="text/css" />
-    <link rel="stylesheet" href="public/assets/vendor/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="public/assets/vendor/css/font-awesome.css" type="text/css" />
     <link rel="stylesheet" href="public/assets/vendor/css/material-design-icons.css" type="text/css" />
     <link rel="stylesheet" href="public/assets/vendor/css/bootstrap.min.css" type="text/css" />
 
@@ -68,6 +68,11 @@
     <link rel="stylesheet" href="public/assets/vendor/css/mep.css" type="text/css" />
 
     <!-- spotify pulse end template -->
+
+    <!-- font awesome css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <!-- weather icons css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css" />
 
     <!-- our built out custom styles -->
     <link rel="stylesheet" href="build/css/styles.min.css">
