--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -946,182 +946,7 @@
       </div>
     </div>
   <!-- ############ SWITHCHER END-->
-  <!-- ############ SEARCH START -->
-    <div class="modal white lt fade" id="search-modal" data-backdrop="false">
-      <a data-dismiss="modal" class="text-muted text-lg p-x modal-close-btn">&times;</a>
-      <div class="row-col">
-        <div class="p-a-lg h-v row-cell v-m">
-          <div class="row">
-            <div class="col-md-8 offset-md-2">
-              <form action="search.html" class="m-b-md">
-                <div class="input-group input-group-lg">
-                  <input type="text" class="form-control" placeholder="Type keyword" data-ui-toggle-class="hide" data-ui-target="#search-result">
-                  <span class="input-group-btn">
-                    <button class="btn b-a no-shadow white" type="submit">Search</button>
-                  </span>
-                </div>
-              </form>
-              <div id="search-result" class="animated fadeIn">
-                <p class="m-b-md"><strong>23</strong> <span class="text-muted">Results found for: </span><strong>Keyword</strong></p>
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="row item-list item-list-sm item-list-by m-b">
-                          <div class="col-xs-12">
-                          	<div class="item r" data-id="item-9" data-src="http://api.soundcloud.com/tracks/264094434/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-                      			<div class="item-media ">
-                      				<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b8.jpg');"></a>
-                      			</div>
-                      			<div class="item-info">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="track.detail.html">All I Need</a>
-                      				</div>
-                      				<div class="item-author text-sm text-ellipsis ">
-                      					<a href="artist.detail.html" class="text-muted">Pablo Nouvelle</a>
-                      				</div>
-                      				<div class="item-meta text-sm text-muted">
-                      		        </div>
-                      
-                      
-                      			</div>
-                      		</div>
-                      	</div>
-                          <div class="col-xs-12">
-                          	<div class="item r" data-id="item-2" data-src="http://api.soundcloud.com/tracks/259445397/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-                      			<div class="item-media ">
-                      				<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b1.jpg');"></a>
-                      			</div>
-                      			<div class="item-info">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="track.detail.html">Fireworks</a>
-                      				</div>
-                      				<div class="item-author text-sm text-ellipsis ">
-                      					<a href="artist.detail.html" class="text-muted">Kygo</a>
-                      				</div>
-                      				<div class="item-meta text-sm text-muted">
-                      		        </div>
-                      
-                      
-                      			</div>
-                      		</div>
-                      	</div>
-                          <div class="col-xs-12">
-                          	<div class="item r" data-id="item-7" data-src="http://api.soundcloud.com/tracks/245566366/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-                      			<div class="item-media ">
-                      				<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b6.jpg');"></a>
-                      			</div>
-                      			<div class="item-info">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="track.detail.html">Reflection (Deluxe)</a>
-                      				</div>
-                      				<div class="item-author text-sm text-ellipsis ">
-                      					<a href="artist.detail.html" class="text-muted">Fifth Harmony</a>
-                      				</div>
-                      				<div class="item-meta text-sm text-muted">
-                      		        </div>
-                      
-                      
-                      			</div>
-                      		</div>
-                      	</div>
-                          <div class="col-xs-12">
-                          	<div class="item r" data-id="item-11" data-src="http://api.soundcloud.com/tracks/218060449/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-                      			<div class="item-media ">
-                      				<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b10.jpg');"></a>
-                      			</div>
-                      			<div class="item-info">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="track.detail.html">Spring</a>
-                      				</div>
-                      				<div class="item-author text-sm text-ellipsis ">
-                      					<a href="artist.detail.html" class="text-muted">Pablo Nouvelle</a>
-                      				</div>
-                      				<div class="item-meta text-sm text-muted">
-                      		        </div>
-                      
-                      
-                      			</div>
-                      		</div>
-                      	</div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="row item-list item-list-sm item-list-by m-b">
-                          <div class="col-xs-12">
-                          	<div class="item">
-                      			<div class="item-media rounded ">
-                      				<a href="artist.detail.html" class="item-media-content" style="background-image: url('images/a4.jpg');"></a>
-                      			</div>
-                      			<div class="item-info ">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="artist.detail.html">Judith Garcia</a>
-                      					<div class="text-sm text-muted">13 songs</div>
-                      				</div>
-                      			</div>
-                      		</div>
-                      	</div>
-                          <div class="col-xs-12">
-                          	<div class="item">
-                      			<div class="item-media rounded ">
-                      				<a href="artist.detail.html" class="item-media-content" style="background-image: url('images/a9.jpg');"></a>
-                      			</div>
-                      			<div class="item-info ">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="artist.detail.html">Douglas Torres</a>
-                      					<div class="text-sm text-muted">20 songs</div>
-                      				</div>
-                      			</div>
-                      		</div>
-                      	</div>
-                          <div class="col-xs-12">
-                          	<div class="item">
-                      			<div class="item-media rounded ">
-                      				<a href="artist.detail.html" class="item-media-content" style="background-image: url('images/b1.jpg');"></a>
-                      			</div>
-                      			<div class="item-info ">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="artist.detail.html">Melissa Garza</a>
-                      					<div class="text-sm text-muted">20 songs</div>
-                      				</div>
-                      			</div>
-                      		</div>
-                      	</div>
-                          <div class="col-xs-12">
-                          	<div class="item">
-                      			<div class="item-media rounded ">
-                      				<a href="artist.detail.html" class="item-media-content" style="background-image: url('images/a3.jpg');"></a>
-                      			</div>
-                      			<div class="item-info ">
-                      				<div class="item-title text-ellipsis">
-                      					<a href="artist.detail.html">Joe Holmes</a>
-                      					<div class="text-sm text-muted">24 songs</div>
-                      				</div>
-                      			</div>
-                      		</div>
-                      	</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div id="top-search" class="btn-groups">
-                <strong class="text-muted">Top searches: </strong>
-                <a href="#" class="btn btn-xs white">Happy</a> 
-                <a href="#" class="btn btn-xs white">Music</a> 
-                <a href="#" class="btn btn-xs white">Weekend</a> 
-                <a href="#" class="btn btn-xs white">Summer</a> 
-                <a href="#" class="btn btn-xs white">Holiday</a> 
-                <a href="#" class="btn btn-xs white">Blue</a> 
-                <a href="#" class="btn btn-xs white">Soul</a> 
-                <a href="#" class="btn btn-xs white">Calm</a> 
-                <a href="#" class="btn btn-xs white">Nice</a> 
-                <a href="#" class="btn btn-xs white">Home</a> 
-                <a href="#" class="btn btn-xs white">SLeep</a> 
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- ############ SEARCH END -->
+  {{> search}}
   <!-- ############ SHARE START -->
   <div id="share-modal" class="modal fade animate">
     <div class="modal-dialog">
