adding live song detection

--- a/views/partials/global/aside.handlebars
+++ b/views/partials/global/aside.handlebars
@@ -1,5 +1,5 @@
   <!-- aside -->
-  <div id="aside" class="app-aside modal fade nav-dropdown" style="bottom: 0!important;">
+  <div id="aside" class="app-aside modal fade nav-dropdown">
     <!-- fluid app aside -->
     <div class="left navside grey dk" data-layout="column">
       <div class="navbar no-radius">
