adding currently plaing into a separate partial and adding it globally

--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -1,4 +1,4 @@
-  <div class="app dk" id="app">
+  <div class="app dk" id="app" data-dbid="{{hbsObject.user._id}}">
 
 <!-- ############ LAYOUT START-->
 
@@ -36,9 +36,7 @@
         <!-- / navbar right -->
       </div>
     </div>
-    <div class="app-footer app-player grey bg">
-      <div class="playlist" style="width:100%"></div>
-    </div>
+    {{> currentlyPlaying}}
     <div class="app-body" id="view">
 
 <!-- ############ PAGE START-->
