--- a/views/player.handlebars
+++ b/views/player.handlebars
@@ -36,9 +36,7 @@
         <!-- / navbar right -->
       </div>
     </div>
-    {{!-- <div class="app-footer app-player grey bg">
-      <div class="playlist" style="width:100%"></div>
-    </div> --}}
+    {{> currentlyPlaying}}
     <div class="app-body" id="view">
 
 <!-- ############ PAGE START-->
