--- a/views/playlist.handlebars
+++ b/views/playlist.handlebars
@@ -36,6 +36,7 @@
         <!-- / navbar right -->
       </div>
     </div>
+    {{> currentlyPlaying}}
     <div class="app-body" id="view">
 
 <!-- ############ PAGE START-->
