--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-  <div class="app dk" id="app">
+  <div class="app dk" id="app" data-dbid="{{hbsObject.user._id}}">
 
 <!-- ############ LAYOUT START-->
 
@@ -36,6 +36,7 @@
         <!-- / navbar right -->
       </div>
     </div>
+    {{> currentlyPlaying}}
     <div class="app-body" id="view">
 
 <!-- ############ PAGE START-->
@@ -623,69 +624,9 @@
             </div>
           </div>
           <div class="tab-pane" id="like">
-            <div class="row m-b">
-                  <div class="col-xs-4 col-sm-4 col-md-3">
-                  	<div class="item r" data-id="item-10" data-src="http://api.soundcloud.com/tracks/237514750/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-              			<div class="item-media ">
-              				<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b9.jpg');"></a>
-              				<div class="item-overlay center">
-              					<button  class="btn-playpause">Play</button>
-              				</div>
-              			</div>
-              			<div class="item-info">
-              				<div class="item-overlay bottom text-right">
-              					<a href="#" class="btn-favorite"><i class="fa fa-heart-o"></i></a>
-              					<a href="#" class="btn-more" data-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-              					<div class="dropdown-menu pull-right black lt"></div>
-              				</div>
-              				<div class="item-title text-ellipsis">
-              					<a href="track.detail.html">The Open Road</a>
-              				</div>
-              				<div class="item-author text-sm text-ellipsis hide">
-              					<a href="artist.detail.html" class="text-muted">Postiljonen</a>
-              				</div>
-              				<div class="item-meta text-sm text-muted">
-              		          <span class="item-meta-stats text-xs ">
-              		          	<i class="fa fa-play text-muted"></i> 860 
-              		          	<i class="fa fa-heart m-l-sm text-muted"></i> 240
-              		          </span>
-              		        </div>
-              
-              
-              			</div>
-              		</div>
-              	</div>
-                  <div class="col-xs-4 col-sm-4 col-md-3">
-                  	<div class="item r" data-id="item-11" data-src="http://api.soundcloud.com/tracks/218060449/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-              			<div class="item-media ">
-              				<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b10.jpg');"></a>
-              				<div class="item-overlay center">
-              					<button  class="btn-playpause">Play</button>
-              				</div>
-              			</div>
-              			<div class="item-info">
-              				<div class="item-overlay bottom text-right">
-              					<a href="#" class="btn-favorite"><i class="fa fa-heart-o"></i></a>
-              					<a href="#" class="btn-more" data-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-              					<div class="dropdown-menu pull-right black lt"></div>
-              				</div>
-              				<div class="item-title text-ellipsis">
-              					<a href="track.detail.html">Spring</a>
-              				</div>
-              				<div class="item-author text-sm text-ellipsis hide">
-              					<a href="artist.detail.html" class="text-muted">Pablo Nouvelle</a>
-              				</div>
-              				<div class="item-meta text-sm text-muted">
-              		          <span class="item-meta-stats text-xs ">
-              		          	<i class="fa fa-play text-muted"></i> 4500 
-              		          	<i class="fa fa-heart m-l-sm text-muted"></i> 2310
-              		          </span>
-              		        </div>
-              
-              
-              			</div>
-              		</div>
-              	</div>
+              {{!-- {{#each }} --}}
+              {{!-- insert liked songs here --}}
+            <div id="liked-songs-profile" class="row m-b">
             </div>
           </div>
           <div class="tab-pane" id="profile">
