--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -116,6 +116,9 @@
     <script src="public/assets/vendor/js/ajax.js"></script>
     <!-- endbuild -->
 
+   <!-- Moment.js -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
+
     <!-- custom js -->
     <script src="build/js/app.min.js"></script>
   </body>
