adding custom likes to user profile

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,7 +26,7 @@
   <div class="b-t">
     <div class="center-block w-xxl w-auto-xs p-y-md text-center">
       <div class="p-a-md">
-        <div>
+        {{!-- <div>
           <a href="#" class="btn btn-block indigo text-white m-b-sm">
             <i class="fa fa-facebook pull-left"></i>
             Sign in with Facebook
@@ -38,7 +38,7 @@
         </div>
         <div class="m-y text-sm">
           OR
-        </div>
+        </div> --}}
         <form name="login">
           <div class="form-group">
             <input id="email" type="email" class="form-control" placeholder="Email" required>
@@ -58,7 +58,7 @@
         </div>
         <div>
           Do not have an account? 
-          <a href="signup.html" class="text-primary _600">Sign up</a>
+          <a href="/signup" class="text-primary _600">Sign up</a>
         </div>
       </div>
     </div>
