--- a/views/partials/global/aside.handlebars
+++ b/views/partials/global/aside.handlebars
@@ -26,7 +26,7 @@
               <li class="nav-header hidden-folded">
                 <span class="text-xs text-muted">Logged in as: {{hbsObject.user.firstName}}</span>
               </li>
-              <li>
+              {{!-- <li>
                 <a href="/player">
                   <span class="nav-icon">
                     <i class="material-icons">
@@ -35,7 +35,7 @@
                   </span>
                   <span class="nav-text">Discover</span>
                 </a>
-              </li>
+              </li> --}}
               <li>
                 <a href="/playlist">
                   <span class="nav-icon">
@@ -46,7 +46,7 @@
                   <span class="nav-text">Playlist</span>
                 </a>
               </li>
-              <li>
+              {{!-- <li>
                 <a href="/browse">
                   <span class="nav-icon">
                     <i class="material-icons">
@@ -55,8 +55,8 @@
                   </span>
                   <span class="nav-text">Browse</span>
                 </a>
-              </li>
-              <li>
+              </li> --}}
+              {{!-- <li>
                 <a href="chart.html">
                   <span class="nav-icon">
                     <i class="material-icons">
@@ -65,8 +65,8 @@
                   </span>
                   <span class="nav-text">Charts</span>
                 </a>
-              </li>
-              <li>
+              </li> --}}
+              {{!-- <li>
                 <a href="artist.html">
                   <span class="nav-icon">
                     <i class="material-icons">
@@ -75,7 +75,7 @@
                   </span>
                   <span class="nav-text">Artist</span>
                 </a>
-              </li>
+              </li> --}}
               <li>
                 <a data-toggle="modal" data-target="#search-modal">
                   <span class="nav-icon">
@@ -91,7 +91,7 @@
               <li class="nav-header hidden-folded m-t">
                 <span class="text-xs text-muted">Your collection</span>
               </li>
-              <li>
+              {{!-- <li>
                 <a href="profile.html#tracks">
                   <span class="nav-label">
                     <b class="label">8</b>
@@ -113,9 +113,9 @@
                   </span>
                   <span class="nav-text">Playlists</span>
                 </a>
-              </li>
+              </li> --}}
               <li>
-                <a href="profile.html#likes">
+                <a href="/profile#liked-songs-profile">
                   <span class="nav-icon">
                     <i class="material-icons">
                       favorite_border
@@ -127,7 +127,7 @@
             </ul>
           </nav>
       </div>
-      <div data-flex-no-shrink>
+      {{!-- <div data-flex-no-shrink>
         <div class="nav-fold dropup">
           <a data-toggle="dropdown">
               <span class="pull-left">
@@ -147,7 +147,7 @@
             <a class="dropdown-item" href="profile.html#playlists">
               <span>Playlists</span>
             </a>
-            <a class="dropdown-item" href="profile.html#likes">
+            <a class="dropdown-item" href="/profile#liked-songs-profile">
               <span>Likes</span>
             </a>
             <div class="dropdown-divider"></div>
@@ -158,7 +158,7 @@
           </div>
         </div>
         
-      </div>
+      </div> --}}
     </div>
   </div>
   <!-- / -->
