--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -14,91 +14,16 @@
             </div>
             </form>
             <div id="search-result" class="animated fadeIn">
-            <p class="m-b-md"><strong>23</strong> <span class="text-muted">Results found for: </span><strong>Keyword</strong></p>
+            {{!-- <p class="m-b-md"><strong>23</strong> <span class="text-muted">Results found for: </span><strong>Keyword</strong></p> --}}
             <div class="row">
                 <div class="col-sm-6">
                 <div id="song-results" class="row item-list item-list-sm item-list-by m-b">
-                        <div class="col-xs-12">
-                        <div class="item r" data-id="item-5" data-src="http://streaming.radionomy.com/JamendoLounge">
-                            <div class="item-media ">
-                                <a href="track.detail.html" class="item-media-content" style="background-image: url('images/b4.jpg');"></a>
-                            </div>
-                            <div class="item-info">
-                                <div class="item-title text-ellipsis">
-                                    <a href="track.detail.html">Live Radio</a>
-                                </div>
-                                <div class="item-author text-sm text-ellipsis ">
-                                    <a href="artist.detail.html" class="text-muted">Radionomy</a>
-                                </div>
-                                <div class="item-meta text-sm text-muted">
-                                </div>
-                    
-                    
-                            </div>
-                        </div>
-                    </div>
-                        <div class="col-xs-12">
-                        <div class="item r" data-id="item-4" data-src="http://api.soundcloud.com/tracks/230791292/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-                            <div class="item-media ">
-                                <a href="track.detail.html" class="item-media-content" style="background-image: url('images/b3.jpg');"></a>
-                            </div>
-                            <div class="item-info">
-                                <div class="item-title text-ellipsis">
-                                    <a href="track.detail.html">What A Time To Be Alive</a>
-                                </div>
-                                <div class="item-author text-sm text-ellipsis ">
-                                    <a href="artist.detail.html" class="text-muted">Judith Garcia</a>
-                                </div>
-                                <div class="item-meta text-sm text-muted">
-                                </div>
-                    
-                    
-                            </div>
-                        </div>
-                    </div>
-                        <div class="col-xs-12">
-                        <div class="item r" data-id="item-8" data-src="http://api.soundcloud.com/tracks/236288744/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-                            <div class="item-media ">
-                                <a href="track.detail.html" class="item-media-content" style="background-image: url('images/b7.jpg');"></a>
-                            </div>
-                            <div class="item-info">
-                                <div class="item-title text-ellipsis">
-                                    <a href="track.detail.html">Simple Place To Be</a>
-                                </div>
-                                <div class="item-author text-sm text-ellipsis ">
-                                    <a href="artist.detail.html" class="text-muted">RYD</a>
-                                </div>
-                                <div class="item-meta text-sm text-muted">
-                                </div>
-                    
-                    
-                            </div>
-                        </div>
-                    </div>
-                        <div class="col-xs-12">
-                        <div class="item r" data-id="item-9" data-src="http://api.soundcloud.com/tracks/264094434/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-                            <div class="item-media ">
-                                <a href="track.detail.html" class="item-media-content" style="background-image: url('images/b8.jpg');"></a>
-                            </div>
-                            <div class="item-info">
-                                <div class="item-title text-ellipsis">
-                                    <a href="track.detail.html">All I Need</a>
-                                </div>
-                                <div class="item-author text-sm text-ellipsis ">
-                                    <a href="artist.detail.html" class="text-muted">Pablo Nouvelle</a>
-                                </div>
-                                <div class="item-meta text-sm text-muted">
-                                </div>
-                    
-                    
-                            </div>
-                        </div>
-                    </div>
+                        
                 </div>
                 </div>
                 <div class="col-sm-6">
                 <div class="row item-list item-list-sm item-list-by m-b">
-                        <div class="col-xs-12">
+                        {{!-- <div class="col-xs-12">
                         <div class="item">
                             <div class="item-media rounded ">
                                 <a href="artist.detail.html" class="item-media-content" style="background-image: url('images/a6.jpg');"></a>
@@ -150,11 +75,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> --}}
                 </div>
             </div>
             </div>
-            <div id="top-search" class="btn-groups">
+            {{!-- <div id="top-search" class="btn-groups">
             <strong class="text-muted">Top searches: </strong>
             <a href="#" class="btn btn-xs white">Happy</a> 
             <a href="#" class="btn btn-xs white">Music</a> 
@@ -167,7 +92,7 @@
             <a href="#" class="btn btn-xs white">Nice</a> 
             <a href="#" class="btn btn-xs white">Home</a> 
             <a href="#" class="btn btn-xs white">SLeep</a> 
-            </div>
+            </div> --}}
         </div>
         </div>
     </div>
