--- a/views/playlist.handlebars
+++ b/views/playlist.handlebars
@@ -47,22 +47,22 @@
         <div class="col-sm w w-auto-xs m-b">
           <div class="item w rounded">
             <div class="item-media">
-              <div class="item-media-content" style="background-image: url('images/a3.jpg');"></div>
+              <div class="item-media-content" style="background-image: url('/public/assets/images/beach.jpeg'); transform: rotate(90deg);"></div>
             </div>
           </div>
         </div>
         <div class="col-sm">
           <div class="p-l-md no-padding-xs">
             <h1 class="page-title">
-              <span class="h1 _800">Rachel Platten</span>
+              <span class="h1 _800">Beach Week 2019</span>
             </h1>
-            <p class="item-desc text-ellipsis text-muted" data-ui-toggle-class="text-ellipsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quamquam tu hanc copiosiorem etiam soles dicere. Nihil illinc huc pervenit. Verum hoc idem saepe faciamus. Quid ad utilitatem tantae pecuniae? Utram tandem linguam nescio? Sed hoc sane concedamus.</p>
-            <div class="item-action m-b">
+            {{!-- <p class="item-desc text-ellipsis text-muted" data-ui-toggle-class="text-ellipsis">test</p> --}}
+            {{!-- <div class="item-action m-b">
               <a href="#" class="btn btn-sm rounded primary">Upload</a>
               <a href="#" class="btn btn-sm rounded white">Edit Profile</a>
-            </div>
+            </div> --}}
             <div class="block clearfix m-b">
-              <span>9</span> <span class="text-muted">Albums</span>, <span>23</span> <span class="text-muted">Tracks</span>
+              <span id="playlist-song-count">{{hbsObject.tracks.length}}</span> <span class="text-muted">Songs</span>
             </div>
           </div>
         </div>
@@ -77,15 +77,15 @@
             <li class="nav-item m-r inline">
               <a class="nav-link active" href="#" data-toggle="tab" data-target="#track">Tracks</a>
             </li>
-            <li class="nav-item m-r inline">
+            {{!-- <li class="nav-item m-r inline">
               <a class="nav-link" href="#" data-toggle="tab" data-target="#playlist">Playlists</a>
-            </li>
-            <li class="nav-item m-r inline">
+            </li> --}}
+            {{!-- <li class="nav-item m-r inline">
               <a class="nav-link" href="#" data-toggle="tab" data-target="#like">Likes</a>
-            </li>
-            <li class="nav-item m-r inline">
+            </li> --}}
+            {{!-- <li class="nav-item m-r inline">
               <a class="nav-link" href="#" data-toggle="tab" data-target="#profile">Profile</a>
-            </li>
+            </li> --}}
           </ul>
         </div>
         <div class="tab-content">
@@ -103,7 +103,7 @@
                             <div class="item-info">
                                 <div class="item-overlay bottom text-right">
                                     <a href="#" class="btn-favorite" data-spotify-track-id="{{this.track.id}}" data-spotify-song-title="{{this.track.name}}" data-spotify-image="{{this.track.album.images.[0].url}}"><i class="fa fa-heart-o"></i></a>
-                                    <a href="#" class="btn-more" data-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
+                                    {{!-- <a href="#" class="btn-more" data-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a> --}}
                                     <div class="dropdown-menu pull-right black lt"></div>
                                 </div>
                                 <div class="item-title text-ellipsis">
@@ -122,7 +122,7 @@
                                 </div>
                 
                                 <div class="item-except visible-list text-sm text-muted h-2x m-t-sm">
-                                    Litatem tantae pecuniae? Utram tandem linguam nescio? Sed hoc sane concedamus.
+                                    {{!-- Litatem tantae pecuniae? Utram tandem linguam nescio? Sed hoc sane concedamus. --}}
                                 </div>
                 
                                 <div class="item-action visible-list m-t-sm">
@@ -475,88 +475,6 @@
     </div>
   </div>
   <!-- / -->
-
-  
-  <!-- ############ SWITHCHER START-->
-    <div id="switcher">
-      <div class="switcher white" id="sw-theme">
-        <a href="#" data-ui-toggle-class="active" data-ui-target="#sw-theme" class="white sw-btn">
-          <i class="fa fa-gear text-muted"></i>
-        </a>
-        <div class="box-header">
-          <strong>Theme Switcher</strong>
-        </div>
-        <div class="box-divider"></div>
-        <div class="box-body">
-          <p id="settingLayout" class="hidden-md-down">
-            <label class="md-check m-y-xs" data-target="folded">
-              <input type="checkbox">
-              <i class="green"></i>
-              <span>Folded Aside</span>
-            </label>
-            <label class="m-y-xs pointer" data-ui-fullscreen data-target="fullscreen">
-              <span class="fa fa-expand fa-fw m-r-xs"></span>
-              <span>Fullscreen Mode</span>
-            </label>
-          </p>
-          <p>Colors:</p>
-          <p data-target="color">
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="primary">
-              <i class="primary"></i>
-            </label>
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="accent">
-              <i class="accent"></i>
-            </label>
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="warn">
-              <i class="warn"></i>
-            </label>
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="success">
-              <i class="success"></i>
-            </label>
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="info">
-              <i class="info"></i>
-            </label>
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="blue">
-              <i class="blue"></i>
-            </label>
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="warning">
-              <i class="warning"></i>
-            </label>
-            <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md">
-              <input type="radio" name="color" value="danger">
-              <i class="danger"></i>
-            </label>
-          </p>
-          <p>Themes:</p>
-          <div data-target="bg" class="text-u-c text-center _600 clearfix">
-            <label class="p-a col-xs-3 light pointer m-a-0">
-              <input type="radio" name="theme" value="" hidden>
-              <i class="active-checked fa fa-check"></i>
-            </label>
-            <label class="p-a col-xs-3 grey pointer m-a-0">
-              <input type="radio" name="theme" value="grey" hidden>
-              <i class="active-checked fa fa-check"></i>
-            </label>
-            <label class="p-a col-xs-3 dark pointer m-a-0">
-              <input type="radio" name="theme" value="dark" hidden>
-              <i class="active-checked fa fa-check"></i>
-            </label>
-            <label class="p-a col-xs-3 black pointer m-a-0">
-              <input type="radio" name="theme" value="black" hidden>
-              <i class="active-checked fa fa-check"></i>
-            </label>
-          </div>
-        </div>
-      </div>
-    </div>
-  <!-- ############ SWITHCHER END-->
   {{> search}}
   <!-- ############ SHARE START -->
   <div id="share-modal" class="modal fade animate">
