--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -62,7 +62,7 @@
               <a href="#" class="btn btn-sm rounded white">Edit Profile</a>
             </div>
             <div class="block clearfix m-b">
-              <span>9</span> <span class="text-muted">Albums</span>, <span>23</span> <span class="text-muted">Tracks</span>
+              <span id="liked-song-count">-</span> <span class="text-muted">Songs liked</span>
             </div>
           </div>
         </div>
@@ -74,18 +74,18 @@
       <div class="padding p-y-0 m-b-md">
         <div class="nav-active-border b-primary bottom m-b-md m-t">
           <ul class="nav l-h-2x" data-ui-jp="taburl">
-            <li class="nav-item m-r inline">
+            {{!-- <li class="nav-item m-r inline">
               <a class="nav-link active" href="#" data-toggle="tab" data-target="#track">Tracks</a>
-            </li>
-            <li class="nav-item m-r inline">
+            </li> --}}
+            {{!-- <li class="nav-item m-r inline">
               <a class="nav-link" href="#" data-toggle="tab" data-target="#playlist">Playlists</a>
-            </li>
+            </li> --}}
             <li class="nav-item m-r inline">
               <a class="nav-link" href="#" data-toggle="tab" data-target="#like">Likes</a>
             </li>
-            <li class="nav-item m-r inline">
+            {{!-- <li class="nav-item m-r inline">
               <a class="nav-link" href="#" data-toggle="tab" data-target="#profile">Profile</a>
-            </li>
+            </li> --}}
           </ul>
         </div>
         <div class="tab-content">
