--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -160,7 +160,7 @@
       					<div class="dropdown-menu pull-right black lt"></div>
       				</div>
       				<div class="item-title text-ellipsis">
-      					<a href="track.detail.html">Live Radio</a>
+      					<a href="track.detail.html">Live Radio!</a>
       				</div>
       				<div class="item-author text-sm text-ellipsis ">
       					<a href="artist.detail.html" class="text-muted">Radionomy</a>
