making the latest likes into a partial

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/player" class="nav-link">
+                <a href="/playlist" class="nav-link">
                 <span class="nav-text">Web App</span>
                 </a>
             </li>
