--- a/views/partials/global/aside.handlebars
+++ b/views/partials/global/aside.handlebars
@@ -4,7 +4,7 @@
     <div class="left navside grey dk" data-layout="column">
       <div class="navbar no-radius">
         <!-- brand -->
-        <a href="/player" class="navbar-brand md">
+        <a href="/playlist" class="navbar-brand md">
         	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="32">
         		<circle cx="24" cy="24" r="24" fill="rgba(255,255,255,0.2)"/>
         		<circle cx="24" cy="24" r="22" fill="#1c202b" class="brand-color"/>
