separating public liked songs vs individual user liked song tracks

--- a/views/partials/latestLikes.handlebars
+++ b/views/partials/latestLikes.handlebars
@@ -2,6 +2,9 @@
       <div class="padding" style="bottom: 60px;" data-ui-jp="stick_in_parent">
       	<h6 class="text text-muted">5 Likes</h6>
       	<div class="row item-list item-list-sm m-b">
+			  {{#each hbsObject.latestLikedSongs}}
+			  	<div>test</div>
+			  {{/each}}
       		    <div class="col-xs-12">
       		    	<div class="item r" data-id="item-3" data-src="http://api.soundcloud.com/tracks/79031167/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
       					<div class="item-media ">
