final touches for beach trip

--- a/views/partials/latestLikes.handlebars
+++ b/views/partials/latestLikes.handlebars
@@ -1,7 +1,7 @@
     <div class="col-lg-3 w-xxl w-auto-md">
       <div class="padding" style="bottom: 60px;" data-ui-jp="stick_in_parent">
-      	<h6 class="text text-muted">5 Likes</h6>
-      	<div class="row item-list item-list-sm m-b">
+      	<h6 class="text text-muted">5 recently liked songs</h6>
+      	<div id="latest-liked-songs-global" class="row item-list item-list-sm m-b">
 			  {{#each hbsObject.latestLikedSongs}}
 			  	<div>test</div>
 			  {{/each}}
@@ -12,79 +12,11 @@
       					</div>
       					<div class="item-info">
       						<div class="item-title text-ellipsis">
-      							<a href="track.detail.html">I Wanna Be In the Cavalry</a>
+      							<a href="track.detail.html">Loading Songs...</a>
       						</div>
-      						<div class="item-author text-sm text-ellipsis ">
+      						{{!-- <div class="item-author text-sm text-ellipsis ">
       							<a href="artist.detail.html" class="text-muted">Jeremy Scott</a>
-      						</div>
-      		
-      		
-      					</div>
-      				</div>
-      			</div>
-      		    <div class="col-xs-12">
-      		    	<div class="item r" data-id="item-1" data-src="http://api.soundcloud.com/tracks/269944843/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-      					<div class="item-media ">
-      						<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b0.jpg');"></a>
-      					</div>
-      					<div class="item-info">
-      						<div class="item-title text-ellipsis">
-      							<a href="track.detail.html">Pull Up</a>
-      						</div>
-      						<div class="item-author text-sm text-ellipsis ">
-      							<a href="artist.detail.html" class="text-muted">Summerella</a>
-      						</div>
-      		
-      		
-      					</div>
-      				</div>
-      			</div>
-      		    <div class="col-xs-12">
-      		    	<div class="item r" data-id="item-12" data-src="http://api.soundcloud.com/tracks/174495152/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-      					<div class="item-media ">
-      						<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b11.jpg');"></a>
-      					</div>
-      					<div class="item-info">
-      						<div class="item-title text-ellipsis">
-      							<a href="track.detail.html">Happy ending</a>
-      						</div>
-      						<div class="item-author text-sm text-ellipsis ">
-      							<a href="artist.detail.html" class="text-muted">Postiljonen</a>
-      						</div>
-      		
-      		
-      					</div>
-      				</div>
-      			</div>
-      		    <div class="col-xs-12">
-      		    	<div class="item r" data-id="item-11" data-src="http://api.soundcloud.com/tracks/218060449/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-      					<div class="item-media ">
-      						<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b10.jpg');"></a>
-      					</div>
-      					<div class="item-info">
-      						<div class="item-title text-ellipsis">
-      							<a href="track.detail.html">Spring</a>
-      						</div>
-      						<div class="item-author text-sm text-ellipsis ">
-      							<a href="artist.detail.html" class="text-muted">Pablo Nouvelle</a>
-      						</div>
-      		
-      		
-      					</div>
-      				</div>
-      			</div>
-      		    <div class="col-xs-12">
-      		    	<div class="item r" data-id="item-6" data-src="http://api.soundcloud.com/tracks/236107824/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
-      					<div class="item-media ">
-      						<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b5.jpg');"></a>
-      					</div>
-      					<div class="item-info">
-      						<div class="item-title text-ellipsis">
-      							<a href="track.detail.html">Body on me</a>
-      						</div>
-      						<div class="item-author text-sm text-ellipsis ">
-      							<a href="artist.detail.html" class="text-muted">Rita Ora</a>
-      						</div>
+      						</div> --}}
       		
       		
       					</div>
