tweaking mobile view as everyone will be on their phones

--- a/views/partials/latestLikes.handlebars
+++ b/views/partials/latestLikes.handlebars
@@ -23,7 +23,7 @@
       				</div>
       			</div>
       	</div>
-      	<h6 class="text text-muted">Go mobile</h6>
+      	{{!-- <h6 class="text text-muted">Go mobile</h6>
       	<div class="btn-groups">
               <a href="" class="btn btn-sm dark lt m-r-xs" style="width: 135px">
                 <span class="pull-left m-r-sm">
@@ -51,6 +51,6 @@
           	<a href="#" class="nav-link text-muted m-r-xs">Legal</a>
           	<a href="#" class="nav-link text-muted m-r-xs">Policy</a>
           </div>
-          <p class="text-muted text-xs p-b-lg">&copy; Copyright 2016</p>
+          <p class="text-muted text-xs p-b-lg">&copy; Copyright 2016</p> --}}
       </div>
     </div>
