--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -627,6 +627,7 @@
               {{!-- {{#each }} --}}
               {{!-- insert liked songs here --}}
             <div id="liked-songs-profile" class="row m-b">
+				<div>Loading your liked songs...</div>
             </div>
           </div>
           <div class="tab-pane" id="profile">
