removing a few links for mobile usage

--- a/views/partials/latestLikes.handlebars
+++ b/views/partials/latestLikes.handlebars
@@ -8,11 +8,11 @@
       		    <div class="col-xs-12">
       		    	<div class="item r" data-id="item-3" data-src="http://api.soundcloud.com/tracks/79031167/stream?client_id=a10d44d431ad52868f1bce6d36f5234c">
       					<div class="item-media ">
-      						<a href="track.detail.html" class="item-media-content" style="background-image: url('images/b2.jpg');"></a>
+      						<a class="item-media-content" style="background-image: url('images/b2.jpg');"></a>
       					</div>
       					<div class="item-info">
       						<div class="item-title text-ellipsis">
-      							<a href="track.detail.html">Loading Songs...</a>
+      							<a>Loading Songs...</a>
       						</div>
       						{{!-- <div class="item-author text-sm text-ellipsis ">
       							<a href="artist.detail.html" class="text-muted">Jeremy Scott</a>
