navigating back to playlist instead of .html page

--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -6,7 +6,7 @@
                 <!-- Form content box start -->
                 <div class="form-content-box">
                     <!-- Logo -->
-                    <a href="index.html">
+                    <a href="/">
                         <img src="img/logos/white-logo.png" class="cm-logo" alt="black-logo">
                     </a>
                     <!-- details -->
