removing show more button

--- a/views/playlist.handlebars
+++ b/views/playlist.handlebars
@@ -106,7 +106,7 @@
                     </div>
                 {{/each}}
             </div>
-            <a href="#" class="btn btn-sm white rounded">Show More</a>
+            {{!-- <a href="#" class="btn btn-sm white rounded">Show More</a> --}}
           </div>
           <div class="tab-pane" id="playlist">
             <div class="row m-b">
