updating landing page for beach trip

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,9 @@
   <div id="content" class="app-content" role="main">
     <div class="app-header navbar-md black box-shadow-z1">
         <div class="navbar" data-pjax="">
-        <a data-toggle="collapse" data-target="#navbar" class="navbar-item pull-right hidden-md-up m-r-0 m-l">
+        {{!-- <a data-toggle="collapse" data-target="#navbar" class="navbar-item pull-right hidden-md-up m-r-0 m-l">
             <i class="material-icons">menu</i>
-        </a>
+        </a> --}}
         <!-- brand -->
         <a href="/" class="navbar-brand md">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="32">
@@ -19,7 +19,7 @@
             </svg>
         
             <img src="images/logo.png" alt="." class="hide">
-            <span class="hidden-folded inline">pulse</span>
+            <span class="hidden-folded inline">beach week</span>
         </a>
         <!-- / brand -->
 
@@ -41,7 +41,7 @@
         <!-- / navbar right -->
 
         <!-- navbar collapse -->
-        <div class="collapse navbar-toggleable-sm l-h-0 text-center" id="navbar">
+        {{!-- <div class="collapse navbar-toggleable-sm l-h-0 text-center" id="navbar">
             <!-- link and dropdown -->
             <ul class="nav navbar-nav nav-md inline text-primary-hover">
             <li class="nav-item">
@@ -56,7 +56,7 @@
             </li>
             </ul>
             <!-- / link and dropdown -->
-        </div>
+        </div> --}}
         <!-- / navbar collapse -->
 
         </div>
@@ -73,9 +73,9 @@
     <div class="col-lg-2"></div>
     <div class="col-lg-8 text-center">
       <div class="p-a-lg">
-        <h2 class="display-4 m-y-lg">A simple, fast and responsive music template</h2>
-        <h6 class="text-muted m-b-lg">HTML5 Music Template</h6>
-        <a href="home.html" class="btn circle btn-outline b-primary m-b-lg p-x-md">Get it now</a>
+        <h2 class="display-4 m-y-lg">Step 1</h2>
+        <h6 class="text-muted m-b-lg">Create a profile</h6>
+        {{!-- <a href="home.html" class="btn circle btn-outline b-primary m-b-lg p-x-md">Get it now</a> --}}
       </div>
     </div>
     <div class="col-lg-2"></div>
@@ -84,9 +84,9 @@
     <div class="col-lg-2"></div>
     <div class="col-lg-8 text-center">
       <div class="p-a-lg">
-        <h2 class="display-4 m-y-lg">Bootstrap 4 CSS framework</h2>
-        <h6 class="text-muted m-b-lg">Responsive layout</h6>
-        <a href="player.html" class="btn circle btn-outline b-primary m-b-lg p-x-md">View App</a>
+        <h2 class="display-4 m-y-lg">Step 2</h2>
+        <h6 class="text-muted m-b-lg">Add songs to a common playlist</h6>
+        {{!-- <a href="player.html" class="btn circle btn-outline b-primary m-b-lg p-x-md">View App</a> --}}
       </div>
     </div>
     <div class="col-lg-2"></div>
@@ -95,15 +95,15 @@
     <div class="col-lg-2"></div>
     <div class="col-lg-8 text-center">
       <div class="p-a-lg">
-        <h2 class="display-4 m-y-lg">Ajax powered page switch with great experience</h2>
-        <h6 class="text-muted m-b-lg">No refresh page when switching pages</h6>
-        <a href="rtl.html" class="btn circle btn-outline b-primary m-b-lg p-x-md">Get RTL</a>
+        <h2 class="display-4 m-y-lg">Step 3</h2>
+        <h6 class="text-muted m-b-lg">Like songs and at the end of the trip have a new set of songs to jam to</h6>
+        {{!-- <a href="rtl.html" class="btn circle btn-outline b-primary m-b-lg p-x-md">Get RTL</a> --}}
       </div>
     </div>
     <div class="col-lg-2"></div>
   </div>
 </div>
-<div class="row-col">
+{{!-- <div class="row-col">
   <div class="col-sm-6">
     <div class="black cover cover-gd" style="background-image: url('images/b1.jpg');">
       <div class="p-a-lg text-center">
@@ -122,9 +122,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
 
-<div class="row-col dark-white">
+{{!-- <div class="row-col dark-white">
   <div class="col-md-3"></div>
   <div class="col-md-6">
     <div class="p-a-lg text-center">
@@ -134,9 +134,9 @@
     </div>
   </div>
   <div class="col-md-3"></div>
-</div>
+</div> --}}
 
-<div class="black cover" data-stellar-background-ratio="0.5" style="background-image: url(&quot;images/b10.jpg&quot;); background-position: 50% -704.5px;">
+{{!-- <div class="black cover" data-stellar-background-ratio="0.5" style="background-image: url(&quot;images/b10.jpg&quot;); background-position: 50% -704.5px;">
   <div class="row-col">
     <div class="col-md-4">
       <div class="p-a-lg text-center">
@@ -157,12 +157,12 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
 
 <!-- ############ PAGE END-->
 
     </div>
-    <div class="white dk pos-rlt">
+    {{!-- <div class="white dk pos-rlt">
       <div class="p-a-md">
         <div class="footer p-y-md text-primary-hover">
           <div class="row">
@@ -262,7 +262,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> --}}
   <!-- / -->
 
 <!-- ############ LAYOUT END-->
